# madevent

./: ;  Cargo.toml  Dockerfile  Makefile  deny.toml
.github/workflows/: ci.yaml  publish.yaml  weekly.yaml
madevent/: Cargo.toml
madevent/src/: consumer.rs  cursor.rs  event.rs  lib.rs  producer.rs  reader.rs  sender.rs  writer.rs
madevent/tests/: bank_simulation.rs
migrations/: 20241130221817_init.sql
src/: main.rs
