[package]
name = "cli"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[workspace]
members = ["madevent"]

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true
