[package]
name = "madevent"
version = "0.1.2"
publish = true
edition = "2021"
license = "AGPL-3.0"
description = "Client for madevent"
repository = "https://github.com/timayz/madevent"
homepage = "https://madevent.timada.co"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
ciborium = "0.2.2"
futures = "0.3.31"
ulid = { version = "1.1.3", features = ["serde"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "sqlite" ] }
thiserror = "2.0.3"
base64 = "0.22.1"

[dev-dependencies]
tokio = "1.41.1"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "sqlite", "any" ] }
fake = { version = "3.0.1", features = ["derive"] }
rand = "0.8.5"
