[package]
name = "madevent"
version = "0.1.2"
publish = true
edition = "2021"
license = "AGPL-3.0"
description = "Client for madevent"
repository = "https://github.com/timayz/madevent"
homepage = "https://madevent.timada.co"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
ciborium = "0.2.2"
futures = "0.3.31"
ulid = { version = "1.1.3", features = ["serde"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio" ] }
thiserror = "2.0.9"
base64 = "0.22.1"

[dev-dependencies]
tokio = "1.42.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite", "any" ] }
fake = { version = "3.1.0", features = ["derive"] }
rand = "0.8.5"
